# Futura

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  rustfmt.toml  tsconfig.json
HACK_BECAUSE_OF_ALLOW_JS/Futura_frontend/: postcss.config.cjs  tailwind.config.js  vite.config.js
HACK_BECAUSE_OF_ALLOW_JS/Futura_frontend/src/: App.js  App.jsx  main.js
HACK_BECAUSE_OF_ALLOW_JS/Futura_frontend/src/components/: Dashborad.jsx  MemoryForm.js
docs/dev/: MEMORY_STORAGE_as_a_lazy_static_variabe.md  serialization_serde_vs_candid.md
src/Futura_backend/: Cargo.toml  Futura_backend.did  Futura_backend.md  stable_structures.md
src/Futura_backend/src/: lib.rs  types.rs  utils.rs
src/Futura_frontend/: components.json  global.d.ts  jsconfig.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
src/Futura_frontend/components/ui/: button.js
src/Futura_frontend/lib/: utils.js
src/Futura_frontend/src/: App.jsx  index.scss  main.jsx
src/Futura_frontend/src/.well-known/: ic-domains
src/Futura_frontend/src/components/: Authentication.tsx  CheckCaller.jsx  Dashboard.tsx  Dashborad.jsx  Features.tsx  Footer.tsx  GreetComponent.jsx  Greeting.jsx  Hero.tsx  ImageUploadForm.jsx  MemoryForm.jsx  PlugDisplayInfo.tsx  PlugDisplayInfoShadcn.tsx  PlugDisplayInfoShadcnTwo.tsx  (+5 more)
src/Futura_frontend/types/: button.d.ts.map  checkbox.d.ts.map  plug.d.ts  tooltip.d.ts.map
tests/: call_store_memory.sh  test_image.py  test_image.sh  test_image_new.sh  test_retrieve_image.sh  tests.md
(+39 files in other folders)
