[package]
name = "futura_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
ic-stable-structures = "0.6.5"
serde = { version = "1.0.210", features = ["derive"] } 
serde_json = "1.0.128" 
# Additional utilities for handling vectors (e.g., for binary data)
bytes = "1.1.0"  # Helpful for dealing with images
